# no-fly

./: .gitignore  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/static/: app.js  style.css
templates/: index.html
