[project]
name = "nofly"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Sakaya",email = "mat.martial@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.5,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
